--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Copy code to second repository
         run: |
-          cp -R $GITHUB_WORKSPACE/* Testcopy/
+          cp -R $GITHUB_WORKSPACE/. Testcopy/
 
       - name: Commit and push changes
         run: |
