--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -34,4 +34,4 @@ jobs:
         run: |
           cd $HOME/Testcopy
           git commit -m "Copy code from temp branch"
-          git push origin demo
+          git push origin HEAD:demo
