--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -34,4 +34,5 @@ jobs:
         run: |
           cd $HOME/Testcopy
           git commit -m "Copy code from temp branch"
+          git remote set-url origin https://github.com/Democopy/Testcopy.git
           git push origin HEAD:demo
