--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -20,7 +20,8 @@ jobs:
 
       - name: Clone second repository
         run: |
-          git clone https://Husnain0092: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@github.com/Democopy/Testcopy.git          cd Testcopy
+          git clone https://Husnain0092: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@github.com/Democopy/Testcopy.git
+          cd Testcopy
           git switch -c demo
 
       - name: Copy code to second repository
