--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -35,9 +35,11 @@ jobs:
         #     ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
           git init
+          git add .
           git commit -m "latest"
           git remote add origin origin https://github.com/Democopy/Testcopy.git
-          git add .
+          git rm -rf README.md
+          git pull origin main
           git push -u origin demo
         # run: |
         #   cd $HOME/Testcopy
