--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           cp -R $GITHUB_WORKSPACE/. $HOME/Testcopy/
           cd $HOME/Testcopy
-          git switch -c demo
+          git switch -c master
           rm -rf .git
           git init
           git add .
@@ -35,7 +35,7 @@ jobs:
           git remote add origin origin https://github.com/Democopy/Testcopy.git
           git rm -rf README.md
           git pull origin main
-          git push -u origin demo
+          git push -u origin master
 
       # - name: Commit and push changes
         # env:
