--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -32,9 +32,11 @@ jobs:
           git add .
           git commit -m "latest"
           git remote add origin https://github.com/Democopy/Testcopy.git
-          git rm -rf README.md
-          git pull origin main
           git switch -c demo
+          git rm -rf README.md
+          git add .
+          git commit -m "new"
+          git pull origin main
           git push -u origin demo
 
       # - name: Commit and push changes
