--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -36,7 +36,7 @@ jobs:
           git rm -rf README.md
           git add .
           git commit -m "new"
-          git pull origin main
+          git pull origin main --ff
           git push -u origin demo
 
       # - name: Commit and push changes
