--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -32,6 +32,8 @@ jobs:
           git add .
           git commit -m "latest"
           git remote add origin https://github.com/Democopy/Testcopy.git
+          git config --global user.name "Husnain0092"
+          git config --global user.email "husnain.ibrahim.12@gmail.com"
           git switch -c demo
           git rm -rf README.md
           git add .
