--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -36,8 +36,9 @@ jobs:
           git rm -rf README.md
           git add .
           git commit -m "new"
-          git config --global user.name "Husnain0092"
-          git config --global user.email "husnain.ibrahim.12@gmail.com"
+          git credential-cache exit
+          git config --local user.name "Husnain0092"
+          git config --local user.email "husnain.ibrahim.12@gmail.com"
           git pull origin main --ff --allow-unrelated-histories
           git push -u origin demo
 
