--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -38,6 +38,8 @@ jobs:
           git remote add origin https://github.com/Democopy/Testcopy.git
           git switch -c demo
           git rm -rf README.md
+          git config --global user.email "husnain.ibrahim.12@gmail.com"
+          git config --global user.name "Husnain0092"
           git add .
           git commit -m "new"
           git pull origin main --ff --allow-unrelated-histories
