--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -29,7 +29,7 @@ jobs:
           cd Testcopy
           cp -R $GITHUB_WORKSPACE/. $HOME/Testcopy/
           cd $HOME/Testcopy
-          rm -rf .git
+          git rm -rf .git
           git config --global user.email "husnain.ibrahim.12@gmail.com"
           git config --global user.name "Husnain0092"
           git init
