--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -29,13 +29,12 @@ jobs:
           cd Testcopy
           cp -R $GITHUB_WORKSPACE/. $HOME/Testcopy/
           cd $HOME/Testcopy
-          git rm -r .git
           git config --global user.email "husnain.ibrahim.12@gmail.com"
           git config --global user.name "Husnain0092"
           git init
           git add .
           git commit -m "latest"
-          git remote add origin https://github.com/Democopy/Testcopy.git
+          git remote set-url https://github.com/Democopy/Testcopy.git
           git switch -c demo
           git rm -rf README.md
           git config --global user.email "husnain.ibrahim.12@gmail.com"
