--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -25,20 +25,18 @@ jobs:
 
       - name: Copy code to second repository
         run: |
-          git clone https://Democopy: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@github.com/Democopy/Testcopy.git
+          git clone https://github.com/Democopy/Testcopy.git
           cd Testcopy
           cp -R $GITHUB_WORKSPACE/. $HOME/Testcopy/
           cd $HOME/Testcopy
-          git config --global user.email "husnain.ibrahim.12@gmail.com"
-          git config --global user.name "Husnain0092"
-          git init
+          git config user.email "husnain.ibrahim.12@gmail.com"
+          git config user.name "Husnain0092"
+          git switch -c demo
           git add .
           git commit -m "latest"
           git remote set-url origin https://github.com/Democopy/Testcopy.git
-          git switch -c demo
+          
           git rm -rf README.md
-          git config --global user.email "husnain.ibrahim.12@gmail.com"
-          git config --global user.name "Husnain0092"
           git add .
           git commit -m "new"
           git pull origin main --ff --allow-unrelated-histories
