--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches:
       - temp
-
+permissions:
+  contents: write
 jobs:
   copy-code:
     runs-on: ubuntu-latest
-
+  
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
