--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -29,14 +29,14 @@ jobs:
           cp -R $GITHUB_WORKSPACE/. $HOME/Testcopy/
           cd $HOME/Testcopy
           git switch -c demo
-          git remote set-url origin https://Democopy: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@github.com/Democopy/Testcopy.git
+          git remote set-url origin2 https://Democopy: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@github.com/Democopy/Testcopy.git
           git config user.email "dokoh60689@dusyum.com"
           git config user.name "Democopy"
           git rm -rf README.md
           git add .
           git commit -m "new"
           git pull origin main --ff --allow-unrelated-histories
-          git push -u origin demo
+          git push origin2 HEAD:demo
 
       # - name: Commit and push changes
         # env:
