--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -36,7 +36,7 @@ jobs:
           git add .
           git commit -m "new"
           git pull origin main --ff --allow-unrelated-histories
-          git push origin2 HEAD:demo
+          git push https://Democopy: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@github.com/Democopy/Testcopy.git demo
 
       # - name: Commit and push changes
         # env:
