--- a/.github/workflows/copy-code.yml
+++ b/.github/workflows/copy-code.yml
@@ -29,7 +29,7 @@ jobs:
           cp -R $GITHUB_WORKSPACE/. $HOME/Testcopy/
           cd $HOME/Testcopy
           git switch -c demo
-          git remote add origin2 https://github.com/Democopy/Testcopy.git
+          git remote set-url origin https://github.com/Democopy/Testcopy.git
           git config user.email "dokoh60689@dusyum.com"
           git config user.name "Democopy"
           git rm -rf README.md
