--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -10,6 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Create target repository
+        run: |
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.TARGET_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/user/repos \
+            -d '{"name": "Test1", "private": false}'
       - name: Checkout source repository
         uses: actions/checkout@v3
         with:
@@ -26,7 +33,7 @@ jobs:
       - name: Checkout target repository
         uses: actions/checkout@v3
         with:
-          repository: git@github.com:Seconddemo/Test.git
+          repository: git@github.com:Seconddemo/Test1.git
           ref: main
 
       - name: Copy branch
@@ -43,3 +50,4 @@ jobs:
           git add .
           git commit -m "Copy temp branch"
           git push origin main
+        
