--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -10,13 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Create target repository
-        run: |
-          curl -X POST \
-            -H "Authorization: Bearer ${{ secrets.TARGET_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/user/repos \
-            -d '{"name": "Test1", "private": false}'
+      # - name: Create target repository
+      #   run: |
+      #     curl -X POST \
+      #       -H "Authorization: Bearer ${{ secrets.TARGET_TOKEN }}" \
+      #       -H "Accept: application/vnd.github.v3+json" \
+      #       https://api.github.com/user/repos \
+      #       -d '{"name": "Test1", "private": false}'
+      
       - name: Checkout source repository
         uses: actions/checkout@v3
         with:
@@ -33,8 +34,9 @@ jobs:
       - name: Checkout target repository
         uses: actions/checkout@v3
         with:
-          repository: git@github.com:Seconddemo/Test1.git
+          repository: Seconddemo/Test1.git
           ref: main
+          token: ${{ secrets.TARGET_TOKEN }}"
 
       - name: Copy branch
         run: |
