--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Copy branch
       
         run: |
-          git clone https://github.com/Seconddemo/Test.git
+          git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
           cd Test
           cp -R ./sample-app/* .
           
