--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -44,7 +44,7 @@ jobs:
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
           cd Test
           ls
-          cp -R ./sample-app/* .
+          cp -R $GITHUB_WORKSPACE/* .
           
 
       - name: Configure Git
