--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -20,9 +20,9 @@ jobs:
       
       - name: Checkout source repository
         uses: actions/checkout@v3
-        with:
-          repository: Husnain0092/sample-app
-          ref: temp
+        # with:
+        #   repository: Husnain0092/sample-app
+        #   ref: temp
 
       # - name: Configure SSH
       #   run: |
