--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
           cd Test
-          ls
+          mkdir -r $HOME/Test
           cp -R $GITHUB_WORKSPACE/* $HOME/Test
           
 
