--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -43,8 +43,7 @@ jobs:
         run: |
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
           cd Test
-          mkdir -r $HOME/Test
-          cp -R $GITHUB_WORKSPACE/* $HOME/Test
+          cp -R $GITHUB_WORKSPACE/* $HOME/.
           
 
       - name: Configure Git
