--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -57,5 +57,5 @@ jobs:
           git remote set-url origin https://github.com/Seconddemo/Test.git
           git switch -c main
           git commit -m "Copy temp branch"
-          git push origin main
+          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git main
         
