--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -56,6 +56,7 @@ jobs:
           git add .
           git remote add origin https://github.com/Seconddemo/Test1.git
           git branch -M main
+          git commit -m "initial"
           git push -u origin main
           
           # git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git main
