--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test1.git
           cd Test1
+          echo $GITHUB_WORKSPACE
           git switch -c main
           cp -R $GITHUB_WORKSPACE/* .
           
