--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -44,7 +44,7 @@ jobs:
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test1.git
           cd Test1
           echo $GITHUB_WORKSPACE
-          git switch -c main
+          git checkout -B main
           cp -R $GITHUB_WORKSPACE/* .
           
 
@@ -56,10 +56,10 @@ jobs:
       - name: Commit and push changes
         run: |
           git add .
-          git remote add origin https://github.com/Seconddemo/Test1.git
+          # git remote add origin https://github.com/Seconddemo/Test1.git
           # git branch -M main
           git commit -m "initial"
-          git push -u origin main
+          git push origin main
           
           # git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git main
         
