--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -17,8 +17,7 @@ jobs:
         run: mkdir temp-directory
 
       - name: Copy branch
-        run: |
-          cp -R $GITHUB_WORKSPACE/* temp-directory/
+        run: cp -R $GITHUB_WORKSPACE/* temp-directory/
 
       - name: Checkout target repository
         uses: actions/checkout@v2
@@ -28,9 +27,8 @@ jobs:
           token: ${{ secrets.PAT }}
 
       - name: Copy files from temp-directory to target directory
-        run: |
-          cp -R temp-directory/* .
-          
+        run: cp -R temp-directory/* .
+
       - name: Configure Git
         run: |
           git config --global user.name "Seconddemo"
@@ -41,6 +39,7 @@ jobs:
           git add .
           git commit -m "Copy temp branch"
           git push origin main
+
 
 
 ###### old
