--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -94,6 +94,7 @@ jobs:
         run: |
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test1.git
           cd Test1
+          ls -la /home/runner/work/sample-app
           echo $GITHUB_WORKSPACE
           git checkout -B main
           shopt -s extglob
