--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -94,12 +94,11 @@ jobs:
         run: |
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test1.git
           cd Test1
-          ls -la /home/runner/work/sample-app
-          echo $GITHUB_WORKSPACE
+          ls -la /home/runner/work/sample-app/sample-app
           git checkout -B main
-          shopt -s extglob
-          mkdir temp-directory
-          cp -R $GITHUB_WORKSPACE/!(temp-directory) temp-directory/          
+          # shopt -s extglob
+          # mkdir temp-directory
+          cp -R /home/runner/work/sample-app/sample-app .     
 
       - name: Configure Git
         run: |
