--- a/.github/workflows/final_copy.yml
+++ b/.github/workflows/final_copy.yml
@@ -103,11 +103,11 @@ jobs:
           cd /home/runner/work/sample-app/sample-app/Test1
           git remote add origin https://github.com/Seconddemo/Test1.git
           git config --global user.name "Seconddemo"
-          git init
+          git config --global user.email "somad56045@gienig.com"
+          # git init
           git add .
           git commit -m "first"
           git switch -c demo
-          git config --global user.email "somad56045@gienig.com"
           git pull origin main
           git push origin demo
           
