--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -23,12 +23,11 @@ jobs:
           # cp -R /home/runner/work/sample-app/sample-app Test
           rsync -av --exclude={.git,Test} /home/runner/work/sample-app/sample-app/* /home/runner/work/sample-app/sample-app/Test 
           cd /home/runner/work/sample-app/sample-app/Test
-          
-          # git remote set-url --add origin https://github.com/Seconddemo/Test.git
+          git remote set-url --add origin https://github.com/Seconddemo/Test.git
           git config --global user.name "Seconddemo"
           git config --global user.email "somad56045@gienig.com"
-          git init
-          git remote add origin https://github.com/Seconddemo/Test.git
+          # git init
+          # git remote add origin https://github.com/Seconddemo/Test.git
           git add .
           git commit -m "first"
           git switch -c demo_new
