--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -16,13 +16,15 @@ jobs:
       - name: Copy branch
       
         run: |
+          cd /home/runner/work
           git clone https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git
           cd Test
           # ls -la /home/runner/work/sample-app/sample-app
-          git checkout -B main
+          # git checkout -B main
           # cp -R /home/runner/work/sample-app/sample-app Test
-          rsync -av --exclude={.git,Test} /home/runner/work/sample-app/sample-app/* /home/runner/work/sample-app/sample-app/Test 
-          cd /home/runner/work/sample-app/sample-app/Test
+          rsync -av --exclude="Test" /home/runner/work/sample-app/sample-app/* /home/runner/work/Test 
+          cd /home/runner/work/Test
+          ls -la /home/runner/work/Test
           git remote set-url --add origin https://github.com/Seconddemo/Test.git
           git config --global user.name "Seconddemo"
           git config --global user.email "somad56045@gienig.com"
@@ -30,7 +32,7 @@ jobs:
           # git remote add origin https://github.com/Seconddemo/Test.git
           git add .
           git commit -m "first"
-          git switch -c demo_new
+          git switch -c demo_new1
           # git pull origin main
-          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
+          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new1
           
