--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -27,14 +27,14 @@ jobs:
           # rsync -av --exclude="Test" /home/runner/work/sample-app/sample-app/* /home/runner/work/Test 
           cd /home/runner/work/Test
           ls -la /home/runner/work/Test
-          # git remote set-url --add origin https://github.com/Seconddemo/Test.git
-          # git config --global user.name "Seconddemo"
-          # git config --global user.email "somad56045@gienig.com"
-          # # git init
-          # # git remote add origin https://github.com/Seconddemo/Test.git
-          # git add .
-          # git commit -m "first"
-          # git switch -c demo_new1
-          # # git pull origin main
-          # git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new1
+          git remote set-url --add origin https://github.com/Seconddemo/Test.git
+          git config --global user.name "Seconddemo"
+          git config --global user.email "somad56045@gienig.com"
+          # git init
+          # git remote add origin https://github.com/Seconddemo/Test.git
+          git add .
+          git commit -m "first"
+          git switch -c demo_new
+          # git pull origin main
+          git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
           
