--- a/.github/workflows/successful.yml
+++ b/.github/workflows/successful.yml
@@ -33,7 +33,7 @@ jobs:
           # git init
           # git remote add origin https://github.com/Seconddemo/Test.git
           git add .
-          git commit -m "first" || true
+          # git commit -m "first" || true
           git switch -c demo_new
           # git pull origin main
           git push https://Seconddemo:${{ secrets.PAT }}@github.com/Seconddemo/Test.git demo_new
